setup configuration for local dev and tests